# mlb_simulator

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test_environment.py  test_sample.py
.github/workflows/: docs.yml  run-tests.yml
docs/: Makefile  conf.py  index.rst  make.bat  make.py
docs/mlb_simulator/: index.html  index.md
mlb_simulator/data/: Statcast_create.sql  data_utils.py  make_dataset.py
mlb_simulator/features/: build_features.py  sql_dataset_loader.py
mlb_simulator/models/: model_utils.py
mlb_simulator/simulation/: Batter.py  Game.py  GameState.py  Pitcher.py  Player.py  Schedule.py  Simulator.py  State.py  Team.py  game_state_t_probs.pkl
models/GameStateTransitionMatrix/: 20240604.pkl  20240719.pkl
models/default_batter/: default_batter.pkl
models/hit_classifier/: 5325-20240721.json  7-20240722.json
models/pitch_outcome/: 457705-20240720.json  (+51 more)
notebooks/: 0.1-learn-pytorch.ipynb  1.0-initial-data-exploration.ipynb  2.0-pitch-generation.ipynb  2.1-pitch-sequencing.ipynb  3.0-pitch-outcome.ipynb  3.1-pitch-outcome-cluster.ipynb  3.2-pitch-outcome-transfer.ipynb  3.3-pitch-outcome-xgboost.ipynb  3.4-pitchoutcome-bnn.ipynb  4.0-bat-outcome.ipynb  4.0-hit-outcome.ipynb  5.0-hit-classifier.ipynb  6.0-field-outcome.ipynb  7.0-rotowire-scrape.ipynb  8.0-park-factors-scrape.ipynb  9.0-odds-scrape.ipynb  9.1-odds-maker.ipynb  =  Statcast_sample.csv  Untitled.ipynb  VenueMappingInit.csv  data_exploration.ipynb  profile_output  profile_output.txt  profile_output_no_pitch_gen.txt  test.csv
tests/: test_sample.py
(+242 files in other folders)
